--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tools Collection | Developer Arsenal</title>
-    <meta name="description" content="A comprehensive collection of development tools and projects">
+    <title>Umar J | Tools & Projects Collection</title>
+    <meta name="description" content="Umar J's collection of web tools and creative projects">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,8 +27,8 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <i class="fas fa-tools"></i>
-                <span>DevTools</span>
+                <i class="fas fa-user-astronaut"></i>
+                <span>Umar J</span>
             </div>
             <div class="nav-menu" id="nav-menu">
                 <a href="#home" class="nav-link">Home</a>
@@ -49,21 +49,20 @@
         <div class="hero-container">
             <div class="hero-content">
                 <h1 class="hero-title">
-                    <span class="title-line">Developer</span>
-                    <span class="title-line accent">Tools Collection</span>
+                    <span class="title-line">Umar J</span>
+                    <span class="title-line accent">Tools & Projects</span>
                 </h1>
                 <p class="hero-subtitle">
-                    Discover a curated collection of powerful development tools and projects 
-                    built to enhance your workflow and boost productivity.
+                    Welcome to my official collection of web tools and creative projects. Explore, use, and enjoy the best of my work—all in one place!
                 </p>
                 <div class="hero-buttons">
                     <a href="#tools" class="btn btn-primary">
                         <i class="fas fa-rocket"></i>
                         Explore Tools
                     </a>
-                    <a href="#projects" class="btn btn-secondary">
-                        <i class="fas fa-code"></i>
-                        View Projects
+                    <a href="#about" class="btn btn-secondary">
+                        <i class="fas fa-user"></i>
+                        About Umar J
                     </a>
                 </div>
             </div>
@@ -72,7 +71,7 @@
                     <div class="card-glow"></div>
                     <div class="card-content">
                         <i class="fas fa-terminal"></i>
-                        <h3>50+ Tools</h3>
+                        <h3>5 Tools</h3>
                         <p>Ready to use</p>
                     </div>
                 </div>
@@ -163,28 +162,28 @@
                     <div class="stat-icon">
                         <i class="fas fa-tools"></i>
                     </div>
-                    <div class="stat-number" data-target="50">0</div>
+                    <div class="stat-number" data-target="5">0</div>
                     <div class="stat-label">Tools Created</div>
                 </div>
                 <div class="stat-card">
                     <div class="stat-icon">
                         <i class="fas fa-download"></i>
                     </div>
-                    <div class="stat-number" data-target="10000">0</div>
-                    <div class="stat-label">Downloads</div>
+                    <div class="stat-number" data-target="1000">0</div>
+                    <div class="stat-label">Users Helped</div>
                 </div>
                 <div class="stat-card">
                     <div class="stat-icon">
                         <i class="fas fa-star"></i>
                     </div>
-                    <div class="stat-number" data-target="500">0</div>
+                    <div class="stat-number" data-target="50">0</div>
                     <div class="stat-label">GitHub Stars</div>
                 </div>
                 <div class="stat-card">
                     <div class="stat-icon">
                         <i class="fas fa-users"></i>
                     </div>
-                    <div class="stat-number" data-target="1000">0</div>
+                    <div class="stat-number" data-target="100">0</div>
                     <div class="stat-label">Happy Users</div>
                 </div>
             </div>
@@ -196,11 +195,9 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
-                    <h2 class="section-title">About This Collection</h2>
+                    <h2 class="section-title">About Umar J</h2>
                     <p class="about-description">
-                        This collection represents years of development experience, featuring tools 
-                        and projects built to solve real-world problems. Each tool is crafted with 
-                        attention to detail, performance, and user experience.
+                        Hi, I'm <b>Umar J</b> — a passionate digital creator and developer. This collection showcases my best web tools and projects, including my biggest work: <b>Drive to Drive Uploader</b> and <b>Ultimate Drive Downloader</b>. I love building things that help people and make the web more useful for everyone.
                     </p>
                     <div class="about-features">
                         <div class="feature">
@@ -209,11 +206,11 @@
                         </div>
                         <div class="feature">
                             <i class="fas fa-check-circle"></i>
-                            <span>Regular Updates</span>
+                            <span>Always Improving</span>
                         </div>
                         <div class="feature">
                             <i class="fas fa-check-circle"></i>
-                            <span>Community Driven</span>
+                            <span>Contact: <a href="mailto:Digitalcreatoruj@gmail.com" style="color: var(--primary-color);">Digitalcreatoruj@gmail.com</a></span>
                         </div>
                     </div>
                 </div>
@@ -255,11 +252,11 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <div class="footer-logo">
-                        <i class="fas fa-tools"></i>
-                        <span>DevTools Collection</span>
+                        <i class="fas fa-user-astronaut"></i>
+                        <span>Umar J</span>
                     </div>
                     <p class="footer-description">
-                        Building tools that make development easier and more enjoyable.
+                        Building tools and projects that make your digital life easier and more fun. Connect with me below!
                     </p>
                 </div>
                 <div class="footer-links">
@@ -270,30 +267,28 @@
                         <a href="#about">About</a>
                     </div>
                     <div class="footer-section">
-                        <h4>Resources</h4>
-                        <a href="#" target="_blank">Documentation</a>
-                        <a href="#" target="_blank">GitHub</a>
-                        <a href="#" target="_blank">Support</a>
-                    </div>
-                    <div class="footer-section">
                         <h4>Connect</h4>
-                        <a href="#" target="_blank">
+                        <a href="https://github.com/umarJ-max" target="_blank">
                             <i class="fab fa-github"></i>
                             GitHub
                         </a>
-                        <a href="#" target="_blank">
-                            <i class="fab fa-linkedin"></i>
-                            LinkedIn
+                        <a href="https://www.instagram.com/umar.j0_?igsh=MWR1djRyeWk4c2dvdA==" target="_blank">
+                            <i class="fab fa-instagram"></i>
+                            Instagram
                         </a>
-                        <a href="#" target="_blank">
-                            <i class="fab fa-twitter"></i>
-                            Twitter
+                        <a href="https://www.facebook.com/share/1LbR3iHDZs/" target="_blank">
+                            <i class="fab fa-facebook"></i>
+                            Facebook
+                        </a>
+                        <a href="mailto:Digitalcreatoruj@gmail.com">
+                            <i class="fas fa-envelope"></i>
+                            Email
                         </a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 DevTools Collection. Made with ❤️ for developers.</p>
+                <p>&copy; 2025 Umar J. Made with ❤️ for the web.</p>
             </div>
         </div>
     </footer>
