Replace sample tools with real Umar J projects and remove filter categories

--- a/index.html
+++ b/index.html
@@ -95,50 +95,20 @@
         </div>
     </section>
 
-    <!-- Filter Section -->
-    <section class="filter-section">
-        <div class="container">
-            <div class="filter-container">
-                <div class="search-box">
-                    <i class="fas fa-search"></i>
-                    <input type="text" id="search-input" placeholder="Search tools and projects...">
-                </div>
-                <div class="filter-tabs">
-                    <button class="filter-btn active" data-filter="all">
-                        <i class="fas fa-th"></i>
-                        All
-                    </button>
-                    <button class="filter-btn" data-filter="web">
-                        <i class="fas fa-globe"></i>
-                        Web Tools
-                    </button>
-                    <button class="filter-btn" data-filter="utility">
-                        <i class="fas fa-wrench"></i>
-                        Utilities
-                    </button>
-                    <button class="filter-btn" data-filter="api">
-                        <i class="fas fa-plug"></i>
-                        APIs
-                    </button>
-                    <button class="filter-btn" data-filter="mobile">
-                        <i class="fas fa-mobile"></i>
-                        Mobile
-                    </button>
-                    <button class="filter-btn" data-filter="desktop">
-                        <i class="fas fa-desktop"></i>
-                        Desktop
-                    </button>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Tools & Projects Grid -->
     <section id="tools" class="tools-section">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">Tools & Projects</h2>
-                <p class="section-subtitle">Explore my collection of development tools and creative projects</p>
+                <h2 class="section-title">My Tools & Projects</h2>
+                <p class="section-subtitle">A collection of powerful tools and solutions I've built to solve real-world problems</p>
+            </div>
+            
+            <!-- Search Only -->
+            <div class="filter-container">
+                <div class="search-box">
+                    <i class="fas fa-search"></i>
+                    <input type="text" id="search-input" placeholder="Search my projects...">
+                </div>
             </div>
             
             <div class="tools-grid" id="tools-grid">
