--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="js/main.js"></script>
-    <script src="js/tools-data.js"></script>
-    <script src="js/animations.js"></script>
+    <script src="js/tools-data.js?v=2"></script>
+    <script src="js/main.js?v=2"></script>
+    <script src="js/animations.js?v=2"></script>
 </body>
 </html>
