Reorder buttons (Details→Code→Use Tool) and add comprehensive web security

--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Umar J | Tools & Projects Collection</title>
     <meta name="description" content="Umar J's collection of web tools and creative projects">
-    <link rel="stylesheet" href="styles/main.css?v=6">
+    
+    <!-- Security Headers -->
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="X-Frame-Options" content="DENY">
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+    <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+    <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
+    
+    <link rel="stylesheet" href="styles/main.css?v=7">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -279,8 +287,8 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="js/tools-data.js?v=6"></script>
-    <script src="js/main.js?v=6"></script>
-    <script src="js/animations.js?v=6"></script>
+    <script src="js/tools-data.js?v=7"></script>
+    <script src="js/main.js?v=7"></script>
+    <script src="js/animations.js?v=7"></script>
 </body>
 </html>
