--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="card-glow"></div>
                     <div class="card-content">
                         <i class="fas fa-terminal"></i>
-                        <h3>14 Tools</h3>
+                        <h3>14+ Tools</h3>
                         <p>Ready to use</p>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                     <div class="stat-icon">
                         <i class="fas fa-tools"></i>
                     </div>
-                    <div class="stat-number" data-target="14">0</div>
+                    <div class="stat-number" data-target="14+">0</div>
                     <div class="stat-label">Tools Created</div>
                 </div>
                 <div class="stat-card">
