--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="phY18JCuNFoabE8kS-8b5w7DPJj9Ai3Lkhqk7B9-GqQ" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <title>Umar J | Tools & Projects Collection</title>
     <meta name="description" content="Umar J's collection of web tools and creative projects">
